--- a/firmware_v5/datalogger/platformio.ini
+++ b/firmware_v5/datalogger/platformio.ini
@@ -9,15 +9,17 @@
 ; http://docs.platformio.org/page/projectconf.html
 
 [env:esp32dev]
-platform = https://github.com/platformio/platform-espressif32.git#feature/arduino-upstream
-platform_packages = platformio/framework-arduinoespressif32 @ https://github.com/espressif/arduino-esp32.git#2.0.5
+platform = https://github.com/platformio/platform-espressif32.git
+platform_packages = platformio/framework-arduinoespressif32
 ;build_flags = -DBOARD_HAS_PSRAM -mfix-esp32-psram-cache-issue
+build_flags = -DBLE_42_FEATURE_SUPPORT=TRUE -DBLE_50_FEATURE_SUPPORT=TRUE
 board=esp-wrover-kit
 board_build.f_cpu = 160000000L
 framework = arduino
 monitor_speed = 115200
 board_build.flash_mode = dio
-    
+board_build.partitions = min_spiffs.csv
+
 [platformio]
 src_dir=.
 
