--- a/firmware_v5/datalogger/platformio.ini
+++ b/firmware_v5/datalogger/platformio.ini
@@ -6,22 +6,20 @@
 ;   Advanced options: extra scripting
 ;
 ; Please visit documentation for the other options and examples
-; http://docs.platformio.org/page/projectconf.html
+; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32dev]
 platform = https://github.com/platformio/platform-espressif32.git
 platform_packages = platformio/framework-arduinoespressif32
-;build_flags = -DBOARD_HAS_PSRAM -mfix-esp32-psram-cache-issue
-build_flags = -DBLE_42_FEATURE_SUPPORT=TRUE -DBLE_50_FEATURE_SUPPORT=TRUE
-board=esp-wrover-kit
+board = esp-wrover-kit
 board_build.f_cpu = 160000000L
 framework = arduino
 monitor_speed = 115200
 board_build.flash_mode = dio
-board_build.partitions = min_spiffs.csv
+lib_deps = h2zero/NimBLE-Arduino@^1.4.1
 
 [platformio]
-src_dir=.
+src_dir = .
 
 [env]
-lib_extra_dirs=../../libraries
+lib_extra_dirs = ../../libraries
