Exclude unit tests from build + extend test

--- a/firmware_v5/datalogger/platformio.ini
+++ b/firmware_v5/datalogger/platformio.ini
@@ -23,3 +23,4 @@ src_dir = .
 
 [env]
 lib_extra_dirs = ../../libraries
+build_src_filter = +<*> -<.git/> -<.svn/> -<.vscode/> -<.vscode/> -<unittest/>
