--- a/firmware_v5/datalogger/platformio.ini
+++ b/firmware_v5/datalogger/platformio.ini
@@ -9,18 +9,20 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32dev]
-platform = https://github.com/platformio/platform-espressif32.git
-platform_packages = platformio/framework-arduinoespressif32
+platform = espressif32
 board = esp-wrover-kit
 board_build.f_cpu = 160000000L
 framework = arduino
 monitor_speed = 115200
 board_build.flash_mode = dio
-lib_deps = h2zero/NimBLE-Arduino@^1.4.1
+board_build.partitions = min_spiffs.csv
+lib_deps = 
+	h2zero/NimBLE-Arduino@^1.4.1
+	me-no-dev/ESP Async WebServer@^1.2.3
 
 [platformio]
 src_dir = .
 
 [env]
 lib_extra_dirs = ../../libraries
-build_src_filter = +<*> -<.git/> -<.svn/> -<.vscode/> -<.vscode/> -<unittest/>
+build_src_filter = +<*> -<.git/> -<.svn/> -<.vscode/> -<unittest/>
